--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -1,7 +1,7 @@
 @mixin thumbnail-style {
     background-size: cover;
-    height: 280px;
-    width: 400px;
+    height: 300px;
+    width: 420px;
     background-position: center;
     display: inline-block;
     float: none;
@@ -9,6 +9,32 @@
     &:hover {
         opacity: 0.8;
         cursor: pointer;
+    }
+    @media (min-width: 768px) and (max-width: 1199px) {
+        
+    }
+    
+    @media only screen and (max-width : 1199px) {
+        height: 240px;
+        width: 360px;
+    }
+
+    /* Small Devices, Tablets */
+    @media only screen and (max-width : 975px) {
+        height: 220px;
+        width: 340px;
+    }
+
+    /* Extra Small Devices, Phones */ 
+    @media only screen and (max-width : 800px) {
+        height: 320px;
+        width: 440px;
+    }
+
+    /* Custom, iPhone Retina */ 
+    @media only screen and (max-width : 500px) {
+        height: 175px;
+        width: 295px;
     }
 }
 
