--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -147,7 +147,7 @@
 
 .project-desc-text {
     font-size: 1.2rem;
-    line-height: 1.8rem;
+    line-height: 2rem;
     font-weight: 300;
     color: #999;
 }
@@ -165,6 +165,7 @@
     list-style: none;
     & > li {
         font-weight: 400;
+        font-size: 12px;
         border-bottom: 1px dotted #DFDFDF;
         padding: inherit;
         color: #666;
@@ -207,8 +208,8 @@
 
 .img-anim {
     position: relative;
-    width: 319px;
-    height: 284px;
+    width: 260px;
+    height: 230px;
     margin: 0 auto 10px;
     img {
       position:absolute;
@@ -229,17 +230,11 @@
 }
 
 .anim-container {
-    position: absolute;
-    left: 3em;
-    top: 1em;
+    position: relative;
+    margin-top: 1em;
 }
 
-.sch-img-container {
-    position: absolute;
-    width: 400px;
-    height: 284px;
-    right: 3em;
-}
+
 
 
 
