--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -12,13 +12,17 @@
       typing 2.5s steps(25,end),
       blink-caret .75s step-end infinite;
     @media only screen and (max-width : 800px) {
-        font-size: 18px;
+        font-size: 24px;
     }
 }  
 
 @keyframes typing {
-      from {width: 0}
-      to {width: 350px}
+    from {width: 0}
+    to {width: 350px}
+    @media only screen and (max-width: 800px) {
+        from {width: 0}
+        to {width: 320px} 
+    }
 }
       
 @keyframes blink-caret {
